# Blackwell

./: .gitignore  CMakeLists.txt  kernel_guidelines.md  kernel_optimizations.md  setup_instance.sh
base/: baseline_gelu.py  baseline_gqa.py  baseline_gqa_causal.py  baseline_gqa_split.py  baseline_layernorm.py  baseline_mha.py  baseline_rmsnorm.py  baseline_softmax.py  baseline_softmax_bwd.py  baseline_sparseCE.py  baseline_swiglu.py  bench_fa4_gqa.py  setup_fa4_b300.sh
benchmark/: layernorm.ipynb  rishi_rmsnorm.ipynb  rmsnorm.ipynb  softmax.ipynb  sparseCE.ipynb  sweep_layernorm.py  sweep_rmsnorm.py
include/utils/: kernelBench.cuh  kernelUtils.cuh
reports/: triton.qdstrm
src/SM103/attention/: GQA_fused_sm103.cu  GQA_sm103.cu  GQA_sm103_causal.cu  GQA_sm103_causal_common.cuh  GQA_sm103_causal_v2.cu  GQA_sm103_causal_v3.cu  GQA_sm103_self.cu  GQA_v48_standalone.cu  correct.txt  fa4_style_gqa_sm103.cu  optimization_hints.txt  tunderKittens.txt
src/SM120/activations/: gelu_ptx_sm120.cu  softmax_bwd_sm120.cu  softmax_sm120.cu  swiglu_sm120.cu
src/SM120/attention/: GQA_self.cu  GQA_sm120.cu  MHA_sm120.cu  adhitya_GQA.cu
src/SM120/loss/: sparseCE_sm120.cu
src/SM120/matmul/: rishi_matmul_sm120.cu
src/SM120/norm/: RMSNorm_sm120.cu  layerNorm_sm120.cu  rishi_rmsnorm.cu
src/ptx/sm120/: gelu.ptx
src/safe/: MHA_sm120_safe.cu
src/utils/: deviceQuery.cu  deviceSpecs.cu
